docs(jdk-only): reconcile the W7 series — 12 records carried stale 'not applied' claims
W7-28 was the worst: its status still said the --enable-preview switch 'is NOT
WIRED' when all four parts of its handback had landed (de9bedeef, 6ce65f98a).
W7-12 said 'NOT APPLIED' with both hunks in the tree (5266bf8c7). W7-2 said
'PARTLY UNWIRED' with the wiring at reflect_annotations.rs:548 (4752a00a4).

Also corrected: W7-15 (3 of 4 patches settled), W7-16 (both hunks landed via
6ae3ca634, and the residual is now WORSE because of it -- the carrier still
implements no interfaces and is now reachable in strict mode), W7-17, W7-18
(A applied in fallback form only), W7-21, W7-25, W7-27, W7-29, W7-33.

W7-29's five residuals are the same defects as W4-3's Patches A/B/C/F seen from
the other end; noted in both so they get fixed once.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>